# AUT_MIEEK_SMS

./: .dockerignore  .editorconfig  .env  .env.example  .env.production  .env.production.SECURE  .env.production.example  .env.qnap  .env.qnap.postgres-only.example  .git_tracked_files.txt  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .test-failures  .trivyignore  00_START_HERE_JAN8.txt  ACTION_GUIDE.md  AGENTS.md  AGENT_COORDINATION_IMPLEMENTATION_COMPLETE.md  AGENT_COORDINATION_README.md  AGENT_ENFORCEMENT_COMPLETE.md  AGENT_QUICK_START.md  AGGRESSIVE_CLEANUP_ENHANCEMENT.md  ARCHITECTURE_IMPROVEMENTS_v1.3.1.md  AUDIT_CHECKLIST.md  AUDIT_CONSOLIDATION.ps1  AUDIT_EXECUTIVE_SUMMARY.md  AUDIT_INDEX.md  AUDIT_REAL_STATE_JAN17.md  AUDIT_SUMMARY.md  AUDIT_VALIDATION_JAN12_FINDINGS.md  BACKUP_FIX_SUMMARY.md  BACKUP_VERIFICATION_AUTOMATION.md  BACKUP_VERIFICATION_INVESTIGATION_2025-12-18.md  BACKUP_VERIFICATION_REPORT_2025-12-18.md  BATCH6_COMPLETION_REPORT.md  (+669 more)
.cache/: frontend-lock.hash  requirements-dev.hash  requirements.hash
.claude/: settings.json  settings.local.json
.githooks/: commit-ready-precommit.sample
.github/: BRANCH_PROTECTION.md  CI_CHANGELOG.md  CI_IMPROVEMENTS.md  CODEOWNERS  EXTENDED_CONSOLIDATION_ANALYSIS.md  EXTENDED_CONSOLIDATION_COMPLETE.md  GITHUB_QUICK_START.md  MAINTENANCE_QUICK_REFERENCE.md  PR_READY.md  PR_SUMMARY.md  PULL_REQUEST_TEMPLATE.md  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_NOTES_v1.12.9.md  RELEASE_NOTES_v1.13.0.md  RELEASE_NOTES_v1.13.1.md  RELEASE_NOTES_v1.14.0.md  RELEASE_NOTES_v1.14.1.md  RELEASE_NOTES_v1.14.3.md  RELEASE_NOTES_v1.17.3.md  RELEASE_NOTES_v1.17.4.md  RELEASE_NOTES_v1.17.8.md  RELEASE_NOTES_v1.17.9.md  RELEASE_NOTES_v1.18.0.md  RELEASE_NOTES_v1.18.1.md  RELEASE_NOTES_v1.18.10.md  RELEASE_NOTES_v1.18.11.md  RELEASE_NOTES_v1.18.13.md  RELEASE_NOTES_v1.18.14.md  RELEASE_NOTES_v1.18.15.md  RELEASE_NOTES_v1.18.16.md  RELEASE_NOTES_v1.18.17.md  RELEASE_NOTES_v1.18.18.md  RELEASE_NOTES_v1.18.19.md  RELEASE_NOTES_v1.18.20.md  RELEASE_NOTES_v1.18.21.md  RELEASE_NOTES_v1.18.22.md  RELEASE_NOTES_v1.18.23.md  RELEASE_NOTES_v1.18.25.md  RELEASE_NOTES_v1.18.26.md  (+20 more)
.tools/: check_try_blocks.py  inspect_quotes.py  parse_check.ps1
CHANGELOG_UPDATES/: feature-ci-mypy-secret-fixes.md
RELEASE_NOTES/: 2025-11-04-control-start-safety.md  2025-11-06-ci-simplification-and-branch-archive.md  README.md  docker-images-1.3.5.md
SMS_Native_Lite_Edition/: INDEX.md
WORKFLOW_FIXES/: IMPLEMENTATION_GUIDE.md  PHASE1_STATUS.md  fix-1-commit-ready-smoke.yml  fix-2-e2e-tests.yml
archive/: ADMIN_API_ERRORS_FIX.md  ALL_FIXES_COMPLETE_2025-01-18.md  ALL_FIXES_VERIFIED.md  API_401_422_DIAGNOSTIC.md  ARTIFACT_STRATEGY.md  CI_MONITORING_CHANGES_SUMMARY.md  CLEANUP_SUMMARY.md  CODEBASE_DATABASE_INPUT_FIXES_2025-11-21.md  CODEBASE_STATUS_REPORT.md  CODE_REVIEW_FINDINGS.md  DATABASE_RESTORE_FIX_SUMMARY.md  DOCUMENTATION_CLEANUP_2025-01-10.md  FINAL_COMMIT_MESSAGE.md  FIXES_APPLIED_2025-01-18.md  FIXES_SUMMARY_2025-11-21.md  GITHUB_RELEASE_DRAFT_v1.2.0.md  MAINTENANCE_TAB_MIGRATION.md  MODE_AWARE_UI_QUICK_REFERENCE.md  MONITORING_INTEGRATION.md  MONITORING_INTEGRATION_POWER_PAGE.md  OnOff.ps1  OnOff.py  OnOff.sh  RATE_LIMIT_FIX_SUMMARY.md  README.md  SESSION_SUMMARY.md  TEST_RESULTS_REPORT.md  UPDATED_COMMIT_SCRIPT.ps1  commit-changes.ps1  test_fixes.py
artifacts/: mypy-report.txt
artifacts_final/: ruff-help.txt
artifacts_new/: ruff-report.err  ruff-version.txt
backend/: -w  .coveragerc  .env  .env.example  .test-failures  API_PERMISSIONS_REFERENCE.md  CONTROL_API.md  ENV_VARS.md  README.md  admin_bootstrap.py  admin_routes.py  alembic.ini  app_factory.py  auto_import_courses.py  cache.py  check_login_health.py  config.py  constraints.txt  control_auth.py  core.py  db.py  db_utils.py  dependencies.py  diagnose_e2e_setup.py  entrypoint.py  environment.py  error_handlers.py  error_messages.py  errors.py  health_checks.py  import_resolver.py  lifespan.py  lite_api_bridge.py  lite_entrypoint.py  lite_entrypoint.spec  lite_http_server.py  lite_simple_entrypoint.py  lite_simple_entrypoint.spec  logging_config.py  main.py  (+35 more)
backups/: backup_20251023_140033.db  backup_20251026_162407.db
baseline-metrics/: baseline_metrics_aggregated.json  baseline_run_1.json  baseline_run_2.json  baseline_run_3.json  baseline_run_4.json  baseline_run_5.json
code-scanning-sarif/: alerts.json  code-scanning-942034144.sarif  code-scanning-942313399.sarif  code-scanning-942314348.sarif  code-scanning-942392222.sarif  code-scanning-942393160.sarif  code-scanning-942425537.sarif  code-scanning-942425565.sarif  code-scanning-942428243.sarif  code-scanning-942429187.sarif  code-scanning-942494274.sarif  code-scanning-942495432.sarif  code-scanning-942500136.sarif  code-scanning-942502207.sarif  code-scanning-942517994.sarif  code-scanning-942519498.sarif  code-scanning-942581209.sarif  code-scanning-942582607.sarif  code-scanning-942604658.sarif  code-scanning-942605862.sarif  code-scanning-942646267.sarif  (+55 more)
(+5571 files in other folders)
