[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated"
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "auth_required: marks tests that require authentication",
    "requires_params: marks tests that require query params",
    "no_rate_limit: marks tests that should bypass rate limiting",
    "usefixtures: marks tests that use fixtures",
    "skipif: marks tests that are conditionally skipped",
    "parametrize: parameterize a test function",
    "xfail: mark test as expected to fail",
    "filterwarnings: filter warnings for test runs"
]

[project]
name = "student-management-system"
version = "0.1.0"
description = "A comprehensive student management system"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "ΜΙΕΕΚ Cyprus", email = "faltsasam@gmail.com" }
]
dependencies = [
    "fastapi==0.136.3",
    "starlette==1.3.1",
    "uvicorn[standard]==0.38.0",
    "sqlalchemy==2.0.44",
    "psycopg[binary]==3.2.12",
    "cryptography==49.0.0",  # CVE-2026-39892 + Dependabot #182/191 fixed in >=48.0.1
    "pydantic==2.12.3",
    "email-validator==2.3.0",
    "python-multipart==0.0.32",  # Dependabot #185-197 fixed in >=0.0.31
    "openpyxl==3.1.5",
    "reportlab==4.4.4",
    "pydantic-settings==2.11.0",
    "alembic==1.17.0",
    "psutil==7.1.1",
    "httpx==0.27.2",
    "requests==2.33.0",
    "slowapi==0.1.9",
    "fastapi-csrf-protect==1.0.7",
    "passlib[bcrypt]==1.7.4",  # legacy-only: verifies PBKDF2-SHA256 hashes; remove after all rows migrate to bcrypt
    "PyJWT==2.13.0",  # CVE-2024-33663/33664/33665/33666
    "docker==7.1.0",
    "prometheus-client==0.21.0",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-exporter-otlp==1.39.1",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-semantic-conventions==0.60b1",
    "redis==5.0.1",
    "psycopg2-binary==2.9.12",
    "python-socketio==5.14.0",
    "python-engineio==4.13.0",
    "apscheduler==3.11.2",
    "pandas==3.0.3",
    "protobuf==6.33.6",  # CVE-2026-0994 fixed in 6.x; opentelemetry-proto requires <7.0
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov==7.0.0",
    "pytest-html==4.1.1",
    "pytest-json-report==1.5.0",
    "types-redis==4.6.0.20241004",
    "detect-secrets>=1.5.0",
    "ruff>=0.8.0",
    "pytest-asyncio==0.23.5",
    "mypy>=1.0.0",
    "aiosqlite==0.20.0",
    "httpx>=0.27.0",
    "python-multipart==0.0.32",  # Dependabot #185-197 fixed in >=0.0.31
    "types-requests>=2.32.0.20241016",
]

[tool.setuptools]
packages = ["backend"]
